Bug 310139 - my name is added to identity's reply-to address
Summary: my name is added to identity's reply-to address
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.9.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-15 10:04 UTC by Silver Salonen
Modified: 2012-11-15 15:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2012-11-15 10:04:54 UTC
I have configured a reply-to address for one of my identities. Also I've configured 1 folder to use that identity. When I now create message while being in that folder, that identity is used, but my name is added to reply-to address (it should not). When I use the same identity by changing identity from composer, the name is not added.

Reproducible: Always

Steps to Reproduce:
1. Create an identity with reply-to address
2. Set that identity to be used for some folder
3. Create a message (new message or reply or forward) while being in that folder
Actual Results:  
My name is added to reply-to address

Expected Results:  
Reply-to address should be as set in identity

I use IMAP-account.
Comment 1 Laurent Montel 2012-11-15 12:51:23 UTC
Are you sure that it's kmail -4.93 ?
Comment 2 Silver Salonen 2012-11-15 12:57:30 UTC
Yes :)
Comment 3 Laurent Montel 2012-11-15 13:13:25 UTC
So I don't understand I verify code and fix is in code.
And works fine here...
So don't know
Comment 4 Silver Salonen 2012-11-15 13:20:18 UTC
Just to be precise (I just gave my reproducing procedure another go and the results are the same):
1. I set 'silver.salonen@mydomain.com' as reply-to address
2. From 'Folder Properties...' I choose that new identity as 'Sender identity'
3. When I create a new message while being in that folder, reply-to address is set to 'Silver Salonen <silver.salonen@mydomain.com>'.
4. When I choose some other identity and choose the previous identity again, reply-to address is set to 'silver.salonen@mydomain.com' (correctly now)
Comment 5 Silver Salonen 2012-11-15 13:28:16 UTC
You know, actually I can reproduce the same thing with my default identity. Just skip step 2 and create the message from any folder.
Comment 6 Laurent Montel 2012-11-15 13:30:36 UTC
if not private could you send in private your ~/.kde/share/config/emailidentities ?
Thanks
Comment 7 Laurent Montel 2012-11-15 15:20:31 UTC
Git commit 5b4ebeb7e832526aee3904757ae25ef8f3bcbf3c by Montel Laurent.
Committed on 15/11/2012 at 16:20.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 310139 - my name is added to identity's reply-to address

FIXED-IN: 4.9.4

M  +1    -1    messagecomposer/messagehelper.cpp

http://commits.kde.org/kdepim/5b4ebeb7e832526aee3904757ae25ef8f3bcbf3c