Fix Bug 310139 - my name is added to identity's reply-to address

FIXED-IN: 4.9.4
BUG: 310139